# devtools

./: Cargo.toml  README.md
src/: app_launcher.rs  apps.rs  launcher.rs  main.rs  modal.rs  scale_factor.rs  tools.rs  utils.rs  uuid_generator.rs
src/apps/: base64_converter.rs  json_beautifier.rs  uuid_generator.rs
src/tools/: base64_converter.rs  json_beautifier.rs  random_data_generator.rs  uuid_generator.rs
