[package]
name = "devtools"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["debug", "highlighter"] }
nucleo-matcher = "0.3.1"
rfd = "0.15.0"
serde = "1.0.210"
serde_json = { version = "1.0.128", features = ["preserve_order"] }
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4", "v7"] }
